--- a/README
+++ b/README
@@ -8,3 +8,14 @@ Author  : younger.shen
 Nick name : xiao tu zi (小兔纸)
 email : younger.x.shen # gmail.com
 blog : http://youngershen.com/blog
+
+License:
+GPLv3
+
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with this program. If not, see: http://www.gnu.org/licenses/
+
+Copyright Brodkin CyberArts
